added seed and completed front form new books

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <%# adding navbar on all pages %>
+    <%= render 'shared/navbar' %>
     <%# adding devise flash messages %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
