--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,13 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container">
+  <h1>Books#index</h1>
+  <p>Find me in app/views/books/index.html.erb</p>
 
-<ul>
-  <% @books.each do |book| %>
+  <ul>
+    <% @books.each do |book| %>
 
-    <li><%= book.title %></li>
-    <li><%= book.author %></li>
-    <li><%= book.delivery_price %></li>
-  <% end %>
-</ul>
+      <li><%= book.title %></li>
+      <li><%= book.author %></li>
+      <li><%= book.delivery_price %></li>
+    <% end %>
+  </ul>
+</div>
