--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<div class="container">
+  <h1 class="h1-form">Add a Book to your Library</h1>
+  <div class="parent">
+    <div class="img-form-new">
+      <%= image_tag "cat-read.png", alt: "cat reading" %>
+    </div>
+    <div class='form-new'>
+      <%= simple_form_for(@book) do |f| %>
+      <%= f.input :title %>
+      <%= f.input :author %>
+      <%= f.input :description %>
+      <%= f.input :delivery_price %>
+      <%= f.input :category, prompt: "Choose a category", collection: ['Best Sellers', 'Classics', 'Sci Fi', 'Crimes'] %>
+      <%= f.input :photo, as: :file %>
+      <%# <%= f.input :photo, label:'Photo(s)', as: :file, input_html: { multiple: true } %>
+      <%# <%= f.input :availability, as: :boolean, class: "form-check-input" %>
+      <%= f.submit "Post it", class:'mt-3 btn btn-ghost'%>
+      <% end %>
+    </div>
+      <div class="img-form-new">
+      <%= image_tag "cat-read-two.png", alt: "cat reading" %>
+    </div>
+  </div>
+</div>
