--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,21 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://wallup.net/wp-content/uploads/2016/06/06/102591-redhead-reading-books-748x421.jpg);">
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://getliterary.com/app/uploads/2018/09/18-Quotes-about-Reading-to-Lift-Up-Your-Soul-1120x630.jpg);">
+  <div class="container">
+    <h1 class="text-home">OpenBooks</h1>
+    <p class='p-home text-center'>The freedom of unlimited reads</p>
+    <div class="home-button"><a class="btn btn-small" href="#">See Books</a></div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="cards">
+    <div class="bloc">
+      <p class="back"><strong>Read unlimited</strong><br>Borrow books from the OpenBooks readers' enthusiast community</p>
+    </div>
+    <div class="bloc-img">
+      <%= image_tag "pic-book-home.png", alt: "picture", width: 200 %>
+    </div>
+    <div class="bloc">
+      <p class="back"><strong>Share your reads</strong><br>Lend your favorite books and let the magic continue beyond home</p>
+    </div>
+  </div>
 </div>
