--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,3 +18,19 @@
   font-size: 1rem;
   font-weight: bold;
 }
+
+.btn-small {
+  background-image: linear-gradient(45deg, #315bcf,  #1EAE98);
+  color: white;
+  padding: 12px 26px;
+  border-radius: 40px;
+  transition: 0.5s;
+  text-decoration: none;
+}
+
+.btn-small:hover {
+  color: white;
+  background-image: linear-gradient(90deg, #315bcf, #1EAE98);
+  box-shadow: 4px 4px 4px rgba(30,30, 30, 0.3);
+  opacity: 0.5;
+}
