--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,43 @@
 // Specific CSS for your home-page
 .banner {
-  height: 560px;
   background-size: cover;
   background-position: center;
+  padding: 150px 0;
+}
+
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 3.5rem;
+  font-weight: bold;
+}
+
+.banner p {
+  font-size: 1.75rem;
+  color: white;
+  opacity: .9;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.home-button {
+  width: max-content;
+  margin: 0 auto;
+}
+
+.cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.cards .bloc-img img {
+  border-radius: 50px;
+}
+
+.cards .bloc {
+  width: 200px;
+  text-align: center;
 }
