--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,9 @@
 <h1>Books#show</h1>
 <p>Find me in app/views/books/show.html.erb</p>
+
+<h2><%= @book.title %></h2>
+<h2><%= @book.author %></h2>
+<h2><%= @book.description %></h2>
+<h2><%= @book.delivery_price %></h2>
+<%= cl_image_tag @book.photo.key, height: 300, width: 400, crop: :fill%>
+
