--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,14 +2,15 @@
   <h1>Books#index</h1>
   <p>Find me in app/views/books/index.html.erb</p>
 
-
   <ul>
     <% @books.each do |book| %>
 
-      <%= cl_image_tag("qweih1fw09scnlkffizb", width: 400, height: 300, crop: :fill) %>
+      <%# <%= cl_image_tag("qweih1fw09scnlkffizb", width: 400, height: 300, crop: :fill) %>
+      <%= cl_image_tag book.photo.key, height: 300, width: 400, crop: :fill%>
       <li><%= book.title %></li>
       <li><%= book.author %></li>
       <li><%= book.delivery_price %></li>
+      <%= link_to 'See More', book_path(book) %>
     <% end %>
   </ul>
 </div>
