--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -4,6 +4,7 @@
     <div class="img-form-new">
       <%= image_tag "cat-read.png", alt: "cat reading" %>
     </div>
+
     <div class='form-new'>
       <%= simple_form_for(@book) do |f| %>
       <%= f.input :title %>
@@ -13,11 +14,12 @@
       <%= f.input :category, prompt: "Choose a category", collection: ['Best Sellers', 'Classics', 'Sci Fi', 'Crimes'] %>
       <%= f.input :photo, as: :file %>
       <%# <%= f.input :photo, label:'Photo(s)', as: :file, input_html: { multiple: true } %>
-      <%# <%= f.input :availability, as: :boolean, class: "form-check-input" %>
+      <%= f.input :availability, label: "dispo" %>
       <%= f.submit "Post it", class:'mt-3 btn btn-ghost'%>
       <% end %>
     </div>
-      <div class="img-form-new">
+
+    <div class="img-form-new">
       <%= image_tag "cat-read-two.png", alt: "cat reading" %>
     </div>
   </div>
