--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 class="text-home">OpenBooks</h1>
     <p class='p-home text-center'>The freedom of unlimited reads</p>
-    <div class="home-button"><a class="btn btn-small" href="#">See Books</a></div>
+    <div class="home-button"><%= link_to 'See Books', books_path, class:"btn btn-small" %></div>
   </div>
 </div>
 
