--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,8 @@
+.navbar {
+  position: sticky;
+  top: 0;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
@@ -15,5 +20,3 @@
   color: #355c7d;
   font-weight: bold;
 }
-
-
