--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -7,15 +7,15 @@
 
     <div class='form-new'>
       <%= simple_form_for(@book) do |f| %>
-      <%= f.input :title %>
-      <%= f.input :author %>
-      <%= f.input :description %>
-      <%= f.input :delivery_price %>
-      <%= f.input :category, prompt: "Choose a category", collection: ['Best Sellers', 'Classics', 'Sci Fi', 'Crimes'] %>
-      <%= f.input :photo, as: :file %>
-      <%# <%= f.input :photo, label:'Photo(s)', as: :file, input_html: { multiple: true } %>
-      <%= f.input :availability, label: "dispo" %>
-      <%= f.submit "Post it", class:'mt-3 btn btn-ghost'%>
+        <%= f.input :title, label:"Book title", placeholder: "Enter book name" %>
+        <%= f.input :author, label:"Autor", placeholder: "Author of the book" %>
+        <%= f.input :description, label: "Summary", :as => :text, :input_html => { 'rows' => 5, 'cols' => 10 } %>
+        <%= f.input :delivery_price, label:"Shipping rate", placeholder:"€" %>
+        <%= f.input :category, collection: ['Best Sellers', 'Classics', 'Sci Fi', 'Crimes'], label: "Category", selected: "Crimes" %>
+        <%= f.input :photo, as: :file %>
+        <%# <%= f.input :photo, label:'Photo(s)', as: :file, input_html: { multiple: true } %>
+        <%= f.input :availability, label: "Available" %>
+        <%= f.submit "Post it", class:'mt-3 btn btn-ghost'%>
       <% end %>
     </div>
 
