--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,25 +12,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <div class="container">
         <ul class="navbar-nav me-auto">
-          <%# if user_signed_in? %>
+          <% if user_signed_in? %>
             <li class="nav-item active">
-              <%= link_to "Lend a Book", "#", class: "nav-link" %>
+              <%= link_to "See all books", books_path, class: "nav-link" %>
             <li class="nav-item">
-              <%= link_to "Borrow a Book", "#", class: "nav-link" %>
+              <%= link_to "Lend a Book", new_book_path, class: "nav-link" %>
             </li>
             <li class="nav-item dropdown">
               <%= image_tag "https://avatars.githubusercontent.com/u/109987907?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <%= link_to "Action", "#", class: "dropdown-item" %>
-                <%= link_to "Another action", "#", class: "dropdown-item" %>
-                <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
+                <%# <%= link_to "Action", "#", class: "dropdown-item" %>
+                <%# <%= link_to "Another action", "#", class: "dropdown-item" %>
+                <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
               </div>
             </li>
-          <%# else %>
+          <% else %>
             <!--li class="nav-item"-->
-              <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
+              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
             <!--/li-->
-          <%# end %>
+          <% end %>
         </ul>
       </div>
     </div>
