--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,4 +1,4 @@
-<%# adding flashes when user logs-in cf Devise %>
+<%# adding flashes when user logs-in cf gem Devise %>
 
 <% if notice %>
   <div class="alert alert-info alert-dismissible fade show m-1" role="alert">
