--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -20,3 +20,10 @@
   color: #355c7d;
   font-weight: bold;
 }
+
+#navbarSupportedContent a {
+  text-decoration: none;
+  color: gray;
+  font-size: 16px;
+  margin: 0px;
+}
