--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <%# adding navbar on all pages %>
     <%= render 'shared/navbar' %>
+    <div class="wrapper">
       <%= yield %>
+    </div>
     <%= render 'shared/flashes' %>
     <%= render 'shared/footer' %>
   </body>
