--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -3,4 +3,13 @@ h1 {
   color: #355C7D;
   font-size: 3rem;
   font-weight: bold;
+  margin: 2rem;
+}
+
+h2, h3 {
+  font-size: 1.5rem;
+}
+
+p {
+  font-size: 1rem;
 }
