--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="h1-form">Add a Book to your Library</h1>
+  <h1 class="h1-form">Modify your book information</h1>
   <div class="parent">
     <div class="img-form-new">
       <%= image_tag "cat-read.png", alt: "cat reading" %>
