--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,13 +9,17 @@
 <div class="container">
   <div class="cards">
     <div class="bloc">
-      <p class="back"><strong>Read unlimited</strong><br>Borrow books from the OpenBooks readers' enthusiast community</p>
+      <p class="home-icon"><i class="fa-regular fa-heart"></i></p>
+      <p class="back"><strong class="back-title">Read unlimited</strong></p>
+      <p>Borrow books from the OpenBooks readers' enthusiast community.</p>
     </div>
     <div class="bloc-img">
       <%= image_tag "pic-book-home.png", alt: "picture", width: 200 %>
     </div>
     <div class="bloc">
-      <p class="back"><strong>Share your reads</strong><br>Lend your favorite books and let the magic continue beyond home</p>
+      <p class="home-icon"><i class="fa-solid fa-wand-magic-sparkles"></i></p>
+      <p class="back"><strong class="back-title">Share<br>your reads</strong></p>
+      <p>Lend your favorite books and let the magic continue beyond home.</p>
     </div>
   </div>
 </div>
