--- a/app/assets/stylesheets/components/_cardtrip.scss
+++ b/app/assets/stylesheets/components/_cardtrip.scss
@@ -23,14 +23,14 @@
 }
 
 .card-trip h2 {
-  font-size: 16px;
+  font-size: 1.50rem;
   font-weight: bold;
   margin: 0;
 }
 
 .card-trip p {
-  font-size: 12px;
-  opacity: .7;
+  font-size: 1rem;
+  color: black;
   margin: 0;
 }
 
@@ -45,6 +45,6 @@
 
 .card-trip .price {
   position: absolute;
-  left: 22rem;
-  top: 2rem;
+  left: 20rem;
+  top: 1.5rem;
 }
