--- a/app/assets/stylesheets/pages/_form.scss
+++ b/app/assets/stylesheets/pages/_form.scss
@@ -6,6 +6,7 @@
   width: 600px;
   margin: auto;
   margin-top: 2rem;
+  margin-bottom: 2rem;
   border: 1px solid #355c7d;
   border-radius: 10px;
   padding: 40px 60px;
