--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -47,3 +47,18 @@
   width: 200px;
   text-align: center;
 }
+
+.back-title {
+  text-transform: uppercase;
+  font-size: 1.75rem;
+  letter-spacing: 2px;
+}
+
+.back {
+  border-bottom: dotted 1px #355c7d;
+}
+
+.home-icon {
+  font-size: 3rem;
+  color:  #355c7d;
+}
