--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,23 +1,34 @@
 <div class="container">
-  <h1>Books#show</h1>
-  <p>Find me in app/views/books/show.html.erb</p>
-  <%# la class row permet de définir 1 ligne %>
-  <div class="row">
-    <%# la class col permet de diviser la page en col %>
-    <div class="col-3">
-      <figure>
-        <%= cl_image_tag @book.photo.key, class:"w-100", crop: :fill%>
-      </figure>
-    </div>
-    <div class="col-9">
+  <h1>Wanna read: <em><%= @book.title %></em></h1>
+  <div class="grid-container">
+    <figure class="img-show">
+      <%= cl_image_tag @book.photo.key, class:"w-100", crop: :fill%>
+    </figure>
+    <div>
       <h3><%= @book.title %></h3>
       <p><%= @book.author %></p>
       <p><%= @book.category %></p>
       <div class="grey-bloc">
-        <p><%= @book.description %></p>
-        <p>delivery_price: <%= @book.delivery_price %>€</p>
-        <%= link_to 'Book it', new_book_reservation_path(@book), class:"btn btn-small" %>
+        <p class="book-desc"><%= @book.description %></p>
+        <p class="price-desc">Delivery price: <%= @book.delivery_price %>€</p>
+        <%# <%= link_to 'Book it', new_book_reservation_path(@book), class:"btn btn-small" %>
       </div>
     </div>
+  </div>
+  <%# adding the reservation form on the books show view %>
+
+  <div class="grid-container">
+    <h2>Book it Now 📓</h2>
+    <%= simple_form_for [@book, @reservation], html: { data: { controller: 'flatpickr'} } do |f| %>
+        <%= f.input :starting_date,
+                    label: "Book from (dd/mm/yyyy)",
+                    as: :string,
+                    input_html: { data: { flatpickr_target: 'startDateInput' } } %>
+        <%= f.input :ending_date,
+                    label: "Until (dd/mm/yyyy)",
+                    as: :string,
+                    input_html: { data: { flatpickr_target: 'endDateInput'} } %>
+        <%= f.button :submit, "Book it", class:"btn btn-small" %>
+      <% end %>
   </div>
 </div>
