--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,18 +3,16 @@
     <%= link_to "#", class: "navbar-brand" do %>
       <p class="mb-0 text-banner">OpenBooks</p>
     <% end %>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <a class="navbar-brand" href="<%= root_path %>">Home</a>
       <div class="container">
         <ul class="navbar-nav me-auto">
           <% if user_signed_in? %>
             <li class="nav-item active">
-              <%= link_to "See all books", books_path, class: "nav-link" %>
+              <%= link_to "See Books", books_path, class: "nav-link" %>
             <li class="nav-item">
               <%= link_to "Add Book to Library", new_book_path, class: "nav-link" %>
             </li>
