--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,17 @@
 <div class="container">
   <div>
-    <h1>Books beyond your imagination</h1>
+    <h1>Read Unlimited</h1>
     <p class="text-center">Check out all the books you can borrow</p>
+  </div>
+  <div class="search">
+    <%= form_with url: books_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Find a book"
+    %>
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
   </div>
 
   <div class="cards">
@@ -18,6 +28,10 @@
             </div>
             <p class="price"><%= book.delivery_price %>€</p>
           </div>
+        </div>
+        <div class='edit-delete'>
+          <%= link_to 'Edit Book', edit_book_path(book) %>
+          <%= link_to 'Delete Book', books_path %>
         </div>
       </div>
     <% end %>
