--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div>
-    <h1>Read Unlimited</h1>
+    <h1 class="index-header">Read Unlimited</h1>
     <p class="text-center">Your shelves are not big enough to contain your love for books?
       <br>OpenBooks is your place for unlimited reads.
       <br>Check out all the books you can borrow from the openBooks readers' community.
