--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -6,6 +6,6 @@
   <%= f.input :category, collection: ['Best Sellers', 'Classics', 'Sci Fi', 'Crimes', 'Other'], label: "Category", selected: "Crimes" %>
   <%= f.input :photo, as: :file %>
   <%# <%= f.input :photo, label:'Photo(s)', as: :file, input_html: { multiple: true } %>
-  <%= f.input :availability, label: "Available" %>
+  <%# <%= f.input :availability, label: "Available" %> 
   <%= f.submit "Post it", class:'mt-3 btn btn-ghost'%>
 <% end %>
